# oxidecms-core-backend

./: README.md
appbase_backend/: Cargo.toml  note
appbase_backend/config/: default.toml
appbase_backend/src/: config.rs  lib.rs  main.rs
appbase_backend/src/helper/: admin_helpers.rs  advanced_db_manager_helpers.rs  contributor_helpers.rs  form_helpers.rs  mod.rs  public_helpers.rs  sanitization_helpers.rs
appbase_backend/src/middleware/: mod.rs
appbase_backend/src/models/: advanced_db_manager_models.rs  mod.rs
appbase_backend/src/models/db_operations/: advanced_db_manager_operations.rs  mod.rs  posts_db_operations.rs  users_db_operations.rs
appbase_backend/src/routes/: admin.rs  advanced_db_manager.rs  contributor.rs  mod.rs  public.rs
appbase_backend/src/setup/: db_setup.rs  mod.rs  setup_cli.rs
appbase_backend/ssr_static/: style.css
appbase_backend/ssr_static/css/: toastui-editor.min.css
appbase_backend/ssr_static/js/: toastui-editor-all.min.js
appbase_backend/templates/: base.html
appbase_backend/templates/admin/: advanced_db_manager.html  dashboard.html  login.html
appbase_backend/templates/contributor/: approve.html  dashboard.html  login.html
