[package]
name = "appbase_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup_cli"
path = "src/setup/setup_cli.rs"

[[bin]]
name = "appbase_server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-multipart = "0.6"
actix-csrf = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
redb = "1.5.0"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
url = "2.3"
futures-util = "0.3"
clap = { version = "4.3", features = ["derive"] }
config = "0.13"
thiserror = "1.0"
walkdir = "2"
actix-web-lab = "0.20"
rand = "0.8"
actix-cors = "0.6"
hex = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
pulldown-cmark = "0.9"
ammonia = "3.3"
regex = "1"
html-escape = "0.2"
